fix: adjust padding and margin for vehicle card and update box shadow for dark mode support

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -14,7 +14,7 @@
     background: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    padding: 10px;
+    padding: 7px;
     z-index: 1;
     transition: left 0.3s ease;
     color: #000000d0;
@@ -39,11 +39,11 @@
     padding: 10px;
     border-radius: 10px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    margin-bottom: 7px;
   }
   
   .dark-mode .vehicle-card {
-    border-bottom: 1px solid #ccc;
-    border-top: 1px solid #ccc;
+    box-shadow: 0px 2px 12px rgba(240, 239, 239, 0.897;
   }
 
   .vehicle-card:last-child {
